--- a/configs/achievements.ini
+++ b/configs/achievements.ini
@@ -15,10 +15,10 @@
 			"event"				"player_death"	                // событие, при котором можно получить это достижение
 			"executor"			"attacker"		                // кто должен выполнить это событие (userid или attacker)
 			
-			//"condition"			"weapon = awp"				// условие получения этого достижения
+			"condition"			""								// условие получения этого достижения
 																// Примеры:
 																// weapon = knife (к примеру это убийство с ножа)
-																// weapon = awp|scout (убийство должно произойти либо с авп либо ссг)
+																// weapon = awp|ssg08 (убийство должно произойти либо с авп либо ссг)
 			"count"				"10"				            // сколько раз необходимо сделать
 			
 			"trigger"			"shop"							//Триггер модуля
