Небольшое дополнение объяснений

--- a/configs/achievements.ini
+++ b/configs/achievements.ini
@@ -19,7 +19,8 @@
 																// Примеры:
 																// weapon = knife (к примеру это убийство с ножа)
 																// weapon = awp|ssg08 (убийство должно произойти либо с авп либо ссг)
-			"count"				"10"				            // сколько раз необходимо сделать
+			"count"				"10"				            // Если нужно использовать 2 условия или более то разделять ';'
+																// Например: Убить в голову с авп => 'weapon = awp;headshot'
 			
 			"trigger"			"shop"							//Триггер модуля
 			"outcome"			"5"								//Параметры триггера
