Добавил cfg, переместил и создал папки

--- a/addons/sourcemod/configs/achievements.ini
+++ b/addons/sourcemod/configs/achievements.ini
@@ -1,12 +1,14 @@
 "Settings"
 {
 	"command"						"ach;mission;job;task"										//Команды для открытия главного меню через ';'
+	"tag"							"{GREEN}[{RED}Achievements{GREEN}]"							//Префикс сообщений плагина в чате.
 
 	"warmup"						"1"															//Можно ли выполнять достижения во время разминки [0 - Нет, 1 - Да].
 	"roundend"						"1"															//Можно ли выполнять достижения в конце раунда: [0 - Нет, 1 - Да].
 	"min_players"					"1"															//Минимальное количество игроков для выполнения достижений
 
 	"notification"					"3"															//Тип увидомления игроку о выполненом достижении: [0 - Выключено, 1 - Сообщение в чат, 2 - Alert, 3 - Center].
+	"server_id"						"1"															//Номер сервера(ов)
 
 	"Achievement"
 	{
