Убран комментарий "//В разработке "tag"

--- a/addons/sourcemod/configs/achievements.ini
+++ b/addons/sourcemod/configs/achievements.ini
@@ -1,7 +1,7 @@
 "Settings"
 {
 	"command"						"ach;mission;job;task"										//Команды для открытия главного меню через ';'
-	//В разработке "tag"							"{GREEN}[{RED}Achievements{GREEN}]"							//Префикс сообщений плагина в чате.
+	"tag"							"{GREEN}[{RED}Achievements{GREEN}]"							//Префикс сообщений плагина в чате.
 
 	"warmup"						"1"															//Можно ли выполнять достижения во время разминки [0 - Нет, 1 - Да].
 	"roundend"						"1"															//Можно ли выполнять достижения в конце раунда: [0 - Нет, 1 - Да].
