--- a/addons/sourcemod/configs/achievements.ini
+++ b/addons/sourcemod/configs/achievements.ini
@@ -17,15 +17,14 @@
 			"event"				"player_death"	                // событие, при котором можно получить это достижение
 			"executor"			"attacker"		                // кто должен выполнить это событие (userid или attacker)
 			
-			"condition"			""								// условие получения этого достижения
+			//"condition"			"weapon = awp"				// условие получения этого достижения
 																// Примеры:
 																// weapon = knife (к примеру это убийство с ножа)
-																// weapon = awp|ssg08 (убийство должно произойти либо с авп либо ссг)
-			"count"				"10"				            // Если нужно использовать 2 условия или более то разделять ';'
-																// Например: Убить в голову с авп => 'weapon = awp;headshot'
+																// weapon = awp|scout (убийство должно произойти либо с авп либо ссг)
+			"count"				"10"				            // сколько раз необходимо сделать
 			
-			"trigger"			"shop"							//Триггер модуля
-			"outcome"			"5"								//Параметры триггера
+			"trigger"			"shop;lvl"							//Триггер модуля
+			"outcome"			"5;5"								//Параметры триггера
 			
 			"notification_all"	"1"								// Уведомлять всех игроков о выполнении достижения?(0 - Нет, 1 - Да)
 			"sound_done"		"achievements/xbox.mp3"			// Звук при выполнении достижения(без sound). (Оставьте пустым чтобы отключить)
@@ -34,53 +33,50 @@
 		
 		"Killer II"
 		{
-			"event"				"player_death"	                // событие, при котором можно получить это достижение
-			"executor"			"attacker"		                // кто должен выполнить это событие (userid или attacker)
+			"event"				"player_death"	             
+			"executor"			"attacker"		             
 			
 			"condition"			""
+			"count"				"50"				         
 			
-			"count"				"50"				            // сколько раз необходимо сделать
+			"trigger"			"shop;lvl"					
+			"outcome"			"30;30"				
 			
-			"trigger"			"shop"							//Триггер модуля
-			"outcome"			"30"							//Параметры триггера
-			
-			"notification_all"	"1"								// Уведомлять всех игроков о выполнении достижения?(0 - Нет, 1 - Да)
-			"sound_done"		"achievements/xbox.mp3"			// Звук при выполнении достижения(без sound). (Оставьте пустым чтобы отключить)
-			"sound_done_volume"	"1.0"								// Громкость звука выполнения достижения: [0.0 - 1.0].
+			"notification_all"	"1"					
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"				
 		}
 		
 		"Killer III"
 		{
-			"event"				"player_death"	                // событие, при котором можно получить это достижение
-			"executor"			"attacker"		                // кто должен выполнить это событие (userid или attacker)
+			"event"				"player_death"	             
+			"executor"			"attacker"		             
 			
 			"condition"			""
+			"count"				"100"				         
 			
-			"count"				"100"				            // сколько раз необходимо сделать
+			"trigger"			"shop;lvl"			
+			"outcome"			"50;50"				
 			
-			"trigger"			"shop"							//Триггер модуля
-			"outcome"			"50"							//Параметры триггера
-			
-			"notification_all"	"1"								// Уведомлять всех игроков о выполнении достижения?(0 - Нет, 1 - Да)
-			"sound_done"		"achievements/xbox.mp3"			// Звук при выполнении достижения(без sound). (Оставьте пустым чтобы отключить)
-			"sound_done_volume"	"1.0"							// Громкость звука выполнения достижения: [0.0 - 1.0].
+			"notification_all"	"1"					
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"				
 		}
 		
 		"Killer IV"
 		{
-			"event"				"player_death"	                // событие, при котором можно получить это достижение
-			"executor"			"attacker"		                // кто должен выполнить это событие (userid или attacker)
+			"event"				"player_death"	             
+			"executor"			"attacker"		             
 			
 			"condition"			""
+			"count"				"200"				         
 			
-			"count"				"200"				            // сколько раз необходимо сделать
+			"trigger"			"shop;lvl"				
+			"outcome"			"150;100"				
 			
-			"trigger"			"shop"							//Триггер модуля
-			"outcome"			"150"							//Параметры триггера
-			
-			"notification_all"	"1"								// Уведомлять всех игроков о выполнении достижения?(0 - Нет, 1 - Да)
-			"sound_done"		"achievements/xbox.mp3"			// Звук при выполнении достижения(без sound). (Оставьте пустым чтобы отключить)
-			"sound_done_volume"	"1.0"								// Громкость звука выполнения достижения: [0.0 - 1.0].
+			"notification_all"	"1"					
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"				
 		}
 		
 		"Killer V"
@@ -89,18 +85,14 @@
 			"executor"			"attacker"
 			
 			"condition"			""
-			
 			"count"				"450"
 
-			"trigger"			"shop"							//Триггер модуля
-			"outcome"			"450"							//Параметры триггера
-																//Rayan - Идентификатор предмета
-																//Custom_Weapons - Категория предмета
-																//86400 - Срок предмета(Если предмет может истечь, иначе это будет количеством сколько выдать предметов)
+			"trigger"			"shop;lvl"				
+			"outcome"			"450;200"				
 
-			"notification_all"	"1"								// Уведомлять всех игроков о выполнении достижения?(0 - Нет, 1 - Да)
-			"sound_done"		"achievements/xbox.mp3"			// Звук при выполнении достижения(без sound). (Оставьте пустым чтобы отключить)
-			"sound_done_volume"	"1.0"							// Громкость звука выполнения достижения: [0.0 - 1.0].
+			"notification_all"	"1"					
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"				
 		}
 		
 		"Killer VI"
@@ -111,15 +103,12 @@
 			"condition"			""
 			"count"				"700"
 
-			"trigger"			"shop"							//Триггер модуля
-			"outcome"			"950"							//Параметры триггера
-																//Rayan - Идентификатор предмета
-																//Custom_Weapons - Категория предмета
-																//86400 - Срок предмета(Если предмет может истечь, иначе это будет количеством сколько выдать предметов)
-
-			"notification_all"	"1"								// Уведомлять всех игроков о выполнении достижения?(0 - Нет, 1 - Да)
-			"sound_done"		"achievements/xbox.mp3"			// Звук при выполнении достижения(без sound). (Оставьте пустым чтобы отключить)
-			"sound_done_volume"	"1.0"							// Громкость звука выполнения достижения: [0.0 - 1.0].
+			"trigger"			"shop;lvl"				
+			"outcome"			"950;300"				
+											
+			"notification_all"	"1"					
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"				
 		}
 		
 		"Killer VII"
@@ -128,18 +117,14 @@
 			"executor"			"attacker"
 			
 			"condition"			""
-			
 			"count"				"1000"
 
-			"trigger"			"shop"							//Триггер модуля
-			"outcome"			"1450"							//Параметры триггера
-																//Rayan - Идентификатор предмета
-																//Custom_Weapons - Категория предмета
-																//86400 - Срок предмета(Если предмет может истечь, иначе это будет количеством сколько выдать предметов)
+			"trigger"			"shop;lvl"				
+			"outcome"			"1450;499"				
 
-			"notification_all"	"1"								// Уведомлять всех игроков о выполнении достижения?(0 - Нет, 1 - Да)
-			"sound_done"		"achievements/xbox.mp3"			// Звук при выполнении достижения(без sound). (Оставьте пустым чтобы отключить)
-			"sound_done_volume"	"1.0"							// Громкость звука выполнения достижения: [0.0 - 1.0].
+			"notification_all"	"1"					
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"				
 		}
 		
 		"Killer VIII"
@@ -148,18 +133,14 @@
 			"executor"			"attacker"
 			
 			"condition"			""
-			
 			"count"				"1500"
 
-			"trigger"			"shop"							//Триггер модуля
-			"outcome"			"2000"							//Параметры триггера
-																//Rayan - Идентификатор предмета
-																//Custom_Weapons - Категория предмета
-																//86400 - Срок предмета(Если предмет может истечь, иначе это будет количеством сколько выдать предметов)
+			"trigger"			"shop;lvl"				
+			"outcome"			"2000;666"			
 
-			"notification_all"	"1"								// Уведомлять всех игроков о выполнении достижения?(0 - Нет, 1 - Да)
-			"sound_done"		"achievements/xbox.mp3"			// Звук при выполнении достижения(без sound). (Оставьте пустым чтобы отключить)
-			"sound_done_volume"	"1.0"							// Громкость звука выполнения достижения: [0.0 - 1.0].
+			"notification_all"	"1"					
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"				
 		}
 		
 		"Killer IX"
@@ -170,34 +151,348 @@
 			"condition"			""
 			"count"				"2000"
 
-			"trigger"			"shop"							//Триггер модуля
-			"outcome"			"2750"							//Параметры триггера
-																//Rayan - Идентификатор предмета
-																//Custom_Weapons - Категория предмета
-																//86400 - Срок предмета(Если предмет может истечь, иначе это будет количеством сколько выдать предметов)
+			"trigger"			"shop;lvl"				
+			"outcome"			"2750;800"				
 
-			"notification_all"	"1"								// Уведомлять всех игроков о выполнении достижения?(0 - Нет, 1 - Да)
-			"sound_done"		"achievements/xbox.mp3"			// Звук при выполнении достижения(без sound). (Оставьте пустым чтобы отключить)
-			"sound_done_volume"	"1.0"							// Громкость звука выполнения достижения: [0.0 - 1.0].
+			"notification_all"	"1"					
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"				
 		}
 		
 		"Killer X"
 		{
 			"event"				"player_death"
 			"executor"			"attacker"
-			
+
 			"condition"			""
 			"count"				"4000"
 
-			"trigger"			"shop"							//Триггер модуля
-			"outcome"			"5000"							//Параметры триггера
-																//Rayan - Идентификатор предмета
-																//Custom_Weapons - Категория предмета
-																//86400 - Срок предмета(Если предмет может истечь, иначе это будет количеством сколько выдать предметов)
+			"trigger"			"shop;lvl"	
+			"outcome"			"5000;1000"
 
-			"notification_all"	"1"								// Уведомлять всех игроков о выполнении достижения?(0 - Нет, 1 - Да)
-			"sound_done"		"achievements/xbox.mp3"			// Звук при выполнении достижения(без sound). (Оставьте пустым чтобы отключить)
-			"sound_done_volume"	"1.0"							// Громкость звука выполнения достижения: [0.0 - 1.0].
+			"notification_all"	"1"
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"
+		}
+		
+		"Sniper I"
+		{
+			"event"				"player_death"
+			"executor"			"attacker"
+
+			"condition"			"weapon = awp|ssg08|g3sg1|scar20"
+			"count"				"10"
+
+			"trigger"			"shop;lvl"	
+			"outcome"			"10;5"
+
+			"notification_all"	"1"
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"
+		}
+		
+		"Sniper II"
+		{
+			"event"				"player_death"
+			"executor"			"attacker"
+
+			"condition"			"weapon = awp|ssg08|g3sg1|scar20"
+			"count"				"30"
+
+			"trigger"			"shop;lvl"	
+			"outcome"			"40;10"
+
+			"notification_all"	"1"
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"
+		}
+		
+		"Sniper III"
+		{
+			"event"				"player_death"
+			"executor"			"attacker"
+
+			"condition"			"weapon = awp|ssg08|g3sg1|scar20"
+			"count"				"60"
+
+			"trigger"			"shop;lvl"	
+			"outcome"			"60;25"
+
+			"notification_all"	"1"
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"
+		}
+		
+		"Sniper IV"
+		{
+			"event"				"player_death"
+			"executor"			"attacker"
+
+			"condition"			"weapon = awp|ssg08|g3sg1|scar20"
+			"count"				"100"
+
+			"trigger"			"shop;lvl"	
+			"outcome"			"120;50"
+
+			"notification_all"	"1"
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"
+		}
+		
+		"Sniper V"
+		{
+			"event"				"player_death"
+			"executor"			"attacker"
+
+			"condition"			"weapon = awp|ssg08|g3sg1|scar20"
+			"count"				"150"
+
+			"trigger"			"shop;lvl"	
+			"outcome"			"200;75"
+
+			"notification_all"	"1"
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"
+		}
+		
+		"Sniper VI"
+		{
+			"event"				"player_death"
+			"executor"			"attacker"
+
+			"condition"			"weapon = awp|ssg08|g3sg1|scar20"
+			"count"				"300"
+
+			"trigger"			"shop;lvl"	
+			"outcome"			"400;125"
+
+			"notification_all"	"1"
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"
+		}
+		
+		"Sniper VII"
+		{
+			"event"				"player_death"
+			"executor"			"attacker"
+
+			"condition"			"weapon = awp|ssg08|g3sg1|scar20"
+			"count"				"850"
+
+			"trigger"			"shop;lvl"	
+			"outcome"			"800;200"
+
+			"notification_all"	"1"
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"
+		}
+		
+		"Sniper VIII"
+		{
+			"event"				"player_death"
+			"executor"			"attacker"
+
+			"condition"			"weapon = awp|ssg08|g3sg1|scar20"
+			"count"				"1200"
+
+			"trigger"			"shop;lvl"	
+			"outcome"			"1500;400"
+
+			"notification_all"	"1"
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"
+		}
+		
+		"Sniper IX"
+		{
+			"event"				"player_death"
+			"executor"			"attacker"
+
+			"condition"			"weapon = awp|ssg08|g3sg1|scar20"
+			"count"				"1600"
+
+			"trigger"			"shop;lvl"	
+			"outcome"			"3000;600"
+
+			"notification_all"	"1"
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"
+		}
+		
+		"Sniper X"
+		{
+			"event"				"player_death"
+			"executor"			"attacker"
+
+			"condition"			"weapon = awp|ssg08|g3sg1|scar20"
+			"count"				"3000"
+
+			"trigger"			"shop;lvl"	
+			"outcome"			"5000;1500"
+
+			"notification_all"	"1"
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"
+		}
+		
+		"Butcher I"
+		{
+			"event"				"player_death"
+			"executor"			"attacker"
+
+			"condition"			"weapon = knife"
+			"count"				"10"
+
+			"trigger"			"shop;lvl"	
+			"outcome"			"20;10"
+
+			"notification_all"	"1"
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"
+		}
+		
+		"Butcher II"
+		{
+			"event"				"player_death"
+			"executor"			"attacker"
+
+			"condition"			"weapon = knife"
+			"count"				"30"
+
+			"trigger"			"shop;lvl"	
+			"outcome"			"50;35"
+
+			"notification_all"	"1"
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"
+		}
+		
+		"Butcher III"
+		{
+			"event"				"player_death"
+			"executor"			"attacker"
+
+			"condition"			"weapon = knife"
+			"count"				"50"
+
+			"trigger"			"shop;lvl"	
+			"outcome"			"150;65"
+
+			"notification_all"	"1"
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"
+		}
+		
+		"Butcher IV"
+		{
+			"event"				"player_death"
+			"executor"			"attacker"
+
+			"condition"			"weapon = knife"
+			"count"				"75"
+
+			"trigger"			"shop;lvl"	
+			"outcome"			"230;90"
+
+			"notification_all"	"1"
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"
+		}
+		
+		"Butcher V"
+		{
+			"event"				"player_death"
+			"executor"			"attacker"
+
+			"condition"			"weapon = knife"
+			"count"				"100"
+
+			"trigger"			"shop;lvl"	
+			"outcome"			"350;150"
+
+			"notification_all"	"1"
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"
+		}
+		
+		"Butcher VI"
+		{
+			"event"				"player_death"
+			"executor"			"attacker"
+
+			"condition"			"weapon = knife"
+			"count"				"150"
+
+			"trigger"			"shop;lvl"	
+			"outcome"			"500;240"
+
+			"notification_all"	"1"
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"
+		}
+		
+		"Butcher VII"
+		{
+			"event"				"player_death"
+			"executor"			"attacker"
+
+			"condition"			"weapon = knife"
+			"count"				"250"
+
+			"trigger"			"shop;lvl"	
+			"outcome"			"700;404"
+
+			"notification_all"	"1"
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"
+		}
+		
+		"Butcher VIII"
+		{
+			"event"				"player_death"
+			"executor"			"attacker"
+
+			"condition"			"weapon = knife"
+			"count"				"400"
+
+			"trigger"			"shop;lvl"	
+			"outcome"			"1000;500"
+
+			"notification_all"	"1"
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"
+		}
+		
+		"Butcher IX"
+		{
+			"event"				"player_death"
+			"executor"			"attacker"
+
+			"condition"			"weapon = knife"
+			"count"				"600"
+
+			"trigger"			"shop;lvl"	
+			"outcome"			"1500;700"
+
+			"notification_all"	"1"
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"
+		}
+		
+		"Butcher X"
+		{
+			"event"				"player_death"
+			"executor"			"attacker"
+
+			"condition"			"weapon = knife"
+			"count"				"800"
+
+			"trigger"			"shop;lvl"	
+			"outcome"			"2500;1200"
+
+			"notification_all"	"1"
+			"sound_done"		"achievements/xbox.mp3"
+			"sound_done_volume"	"1.0"
 		}
 	}
 }
