--- a/addons/sourcemod/configs/achievements.ini
+++ b/addons/sourcemod/configs/achievements.ini
@@ -6,6 +6,7 @@
 	"warmup"						"1"															//Можно ли выполнять достижения во время разминки [0 - Нет, 1 - Да].
 	"roundend"						"1"															//Можно ли выполнять достижения в конце раунда: [0 - Нет, 1 - Да].
 	"min_players"					"1"															//Минимальное количество игроков для выполнения достижений
+	"inv_thisorthat"				"1"															//Система инвентаря [0 - Нет, 1 - Да].
 
 	"notification"					"3"															//Тип увидомления игроку о выполненом достижении: [0 - Выключено, 1 - Сообщение в чат, 2 - Alert, 3 - Center].
 	"server_id"						"1"															//Номер сервера(ов)
