--- a/addons/sourcemod/configs/achievements.ini
+++ b/addons/sourcemod/configs/achievements.ini
@@ -1,3 +1,6 @@
+//Подробнее о создании достижений и "event","executor","condition"
+//Здесь https://wiki.alliedmods.net/Game_Events_(Source)
+
 "Settings"
 {
 	"command"						"ach;mission;job;task"										//Команды для открытия главного меню через ';'
@@ -7,29 +10,39 @@
 	"roundend"						"1"															//Можно ли выполнять достижения в конце раунда: [0 - Нет, 1 - Да].
 	"min_players"					"1"															//Минимальное количество игроков для выполнения достижений
 	"inv_thisorthat"				"1"															//Система инвентаря [0 - Нет, 1 - Да].
+	"continue"						"0"															//Выполнять ли последовательно достижения с одинаковыми "event" [0 - Параллельно, 1 - По "event"(Последовательно), 2 - "condition"(Последовательно)].
+																								//То есть, у нас "count" "10" в достижении "Killer I" и "count" "50" в достижении "Killer II",
+																								//Если-бы стояло "continue" "1", то когда игрок выполнит "Killer I", то "Killer II" начнеться с 0 а не с 10.
+																								//А если-бы стояло "continue" "0", то когда игрок выполнит "Killer I", то "Killer II" продолжиться с 10 а не с 0,
+																								//Так как у нас "count" "10" в достижении "Killer I", то есть для "Killer II" останется выполнить 40 раз а не 50 как задано.
+																								//Проще говоря, достижение будет продолжиться или начнется с нуля
 
-	"notification"					"3"															//Тип увидомления игроку о выполненом достижении: [0 - Выключено, 1 - Сообщение в чат, 2 - Alert, 3 - Center].
+	"notification"					"3"															//Тип уведомления игроку о выполненном достижении: [0 - Выключено, 1 - Сообщение в чат, 2 - Alert, 3 - Center].
 	"server_id"						"1"															//Номер сервера(ов)
 
 	"Achievement"
 	{
-		"Killer I"	                                    										// название достижения (берется из файла перевода в трех видах: название, описание, награда)
+		"Killer I"	                                    										//Название достижения (берется из файла перевода в трех видах: название, описание, награда)
 		{
-			"event"				"player_death"	               									// событие, при котором можно получить это достижение
-			"executor"			"attacker"		               									// кто должен выполнить это событие (userid или attacker)
+			"event"				"player_death"	               									//Событие, при котором можно получить это достижение
+			"executor"			"attacker"		               									//Кто должен выполнить это событие (userid или attacker)
 			
-			//"condition"			"weapon = awp"												// условие получения этого достижения
-																								// Примеры:
-																								// weapon = knife (к примеру это убийство с ножа)
-																								// weapon = awp|scout (убийство должно произойти либо с авп либо ссг)
-			"count"				"10"				            								// сколько раз необходимо сделать
-			
+			"condition"			"none"															//условие получения этого достижения
+																								//Примеры:
+																								//none (Обязательно! Если ничего не хотите ставить здесь)
+																								//weapon = knife (к примеру, это убийство с ножа)
+																								//weapon = awp|scout (убийство должно произойти либо с авп либо ссг)
+			"count"				"10"				            								//сколько раз необходимо сделать
+
 			"trigger"			"shop;lvl"														//Триггер модуля
 			"outcome"			"5;5"															//Параметры триггера
 			
-			"notification_all"	"1"																// Уведомлять всех игроков о выполнении достижения?(0 - Нет, 1 - Да)
-			"sound_done"		"achievements/xbox.mp3"											// Звук при выполнении достижения(без sound). (Оставьте пустым чтобы отключить)
-			"sound_done_volume"	"1.0"															// Громкость звука выполнения достижения: [0.0 - 1.0].
+			"hide"				"0"																//Скрывать ли достижение в меню (Проще говоря, оно скрыто в меню, но так же доступно для выполнения)
+			"map"				"de_dust2"														//На какой карте будет выполняться достижение
+
+			"notification_all"	"1"																//Уведомлять всех игроков о выполнении достижения?(0 - Нет, 1 - Да)
+			"sound_done"		"achievements/xbox.mp3"											//Звук при выполнении достижения(без sound). (Оставьте пустым чтобы отключить)
+			"sound_done_volume"	"1.0"															//Громкость звука выполнения достижения: [0.0 - 1.0].
 		}
 		
 		"Killer II"
@@ -37,7 +50,7 @@
 			"event"				"player_death"	             
 			"executor"			"attacker"		             
 			
-			"condition"			""
+			"condition"			"none"
 			"count"				"50"				         
 			
 			"trigger"			"shop;lvl"					
@@ -53,7 +66,7 @@
 			"event"				"player_death"	             
 			"executor"			"attacker"		             
 			
-			"condition"			""
+			"condition"			"none"
 			"count"				"100"				         
 			
 			"trigger"			"shop;lvl"			
@@ -69,7 +82,7 @@
 			"event"				"player_death"	             
 			"executor"			"attacker"		             
 			
-			"condition"			""
+			"condition"			"none"
 			"count"				"200"				         
 			
 			"trigger"			"shop;lvl"				
@@ -85,7 +98,7 @@
 			"event"				"player_death"
 			"executor"			"attacker"
 			
-			"condition"			""
+			"condition"			"none"
 			"count"				"450"
 
 			"trigger"			"shop;lvl"				
@@ -101,7 +114,7 @@
 			"event"				"player_death"
 			"executor"			"attacker"
 			
-			"condition"			""
+			"condition"			"none"
 			"count"				"700"
 
 			"trigger"			"shop;lvl"				
@@ -117,7 +130,7 @@
 			"event"				"player_death"
 			"executor"			"attacker"
 			
-			"condition"			""
+			"condition"			"none"
 			"count"				"1000"
 
 			"trigger"			"shop;lvl"				
@@ -133,7 +146,7 @@
 			"event"				"player_death"
 			"executor"			"attacker"
 			
-			"condition"			""
+			"condition"			"none"
 			"count"				"1500"
 
 			"trigger"			"shop;lvl"				
@@ -149,7 +162,7 @@
 			"event"				"player_death"
 			"executor"			"attacker"
 			
-			"condition"			""
+			"condition"			"none"
 			"count"				"2000"
 
 			"trigger"			"shop;lvl"				
@@ -165,7 +178,7 @@
 			"event"				"player_death"
 			"executor"			"attacker"
 
-			"condition"			""
+			"condition"			"none"
 			"count"				"4000"
 
 			"trigger"			"shop;lvl"	
