Вернули проверку на ботов

--- a/addons/sourcemod/configs/achievements.ini
+++ b/addons/sourcemod/configs/achievements.ini
@@ -1,4 +1,4 @@
-//Подробнее о создании достижений и "event","executor","condition"
+//Где взять "event","executor","condition"
 //Здесь https://wiki.alliedmods.net/Game_Events_(Source)
 
 "Settings"
