--- a/addons/sourcemod/configs/achievements.ini
+++ b/addons/sourcemod/configs/achievements.ini
@@ -7,7 +7,7 @@
 	"tag"							"{GREEN}[{RED}Achievements{GREEN}]"							//Префикс сообщений плагина в чате.
 
 	"warmup"						"1"															//Можно ли выполнять достижения во время разминки [0 - Нет, 1 - Да].
-	"roundend"						"1"															//Можно ли выполнять достижения в конце раунда: [0 - Нет, 1 - Да].
+	"roundend"						"1"															//Можно ли выполнять достижения в конце раунда [0 - Нет, 1 - Да].
 	"min_players"					"1"															//Минимальное количество игроков для выполнения достижений
 	"inv_thisorthat"				"1"															//Система инвентаря [0 - Нет, 1 - Да].
 	"continue"						"0"															//Выполнять ли последовательно достижения с одинаковыми "event" [0 - Параллельно, 1 - По "event"(Последовательно), 2 - "condition"(Последовательно)].
