--- a/addons/sourcemod/configs/achievements.ini
+++ b/addons/sourcemod/configs/achievements.ini
@@ -3,191 +3,157 @@
 
 "Settings"
 {
-	"command"						"ach;mission;job;task"										//Команды для открытия главного меню через ';'
-	"tag"							"{GREEN}[{RED}Achievements{GREEN}]"							//Префикс сообщений плагина в чате.
+	"command"						"ach;mission;job;task"										//	Команды для открытия главного меню через ';'
+	"tag"							"{GREEN}[{RED}Achievements{GREEN}]"							//	Префикс сообщений плагина в чате.
 
-	"warmup"						"1"															//Можно ли выполнять достижения во время разминки [0 - Нет, 1 - Да].
-	"roundend"						"1"															//Можно ли выполнять достижения в конце раунда [0 - Нет, 1 - Да].
-	"min_players"					"1"															//Минимальное количество игроков для выполнения достижений
-	"inv_thisorthat"				"1"															//Система инвентаря [0 - Нет, 1 - Да].
-	"continue"						"0"															//Выполнять ли последовательно достижения с одинаковыми "event" [0 - Параллельно, 1 - По "event"(Последовательно), 2 - "condition"(Последовательно)].
-																								//То есть, у нас "count" "10" в достижении "Killer I" и "count" "50" в достижении "Killer II",
-																								//Если-бы стояло "continue" "1", то когда игрок выполнит "Killer I", то "Killer II" начнеться с 0 а не с 10.
-																								//А если-бы стояло "continue" "0", то когда игрок выполнит "Killer I", то "Killer II" продолжиться с 10 а не с 0,
-																								//Так как у нас "count" "10" в достижении "Killer I", то есть для "Killer II" останется выполнить 40 раз а не 50 как задано.
-																								//Проще говоря, достижение будет продолжиться или начнется с нуля
+	"warmup"						"1"															//	Можно ли выполнять достижения во время разминки [0 - Нет, 1 - Да].
+	"roundend"						"1"															//	Можно ли выполнять достижения в конце раунда [0 - Нет, 1 - Да].
+	"min_players"					"1"															//	Минимальное количество игроков для выполнения достижений
+	"inv_thisorthat"				"1"															//	Система инвентаря [0 - Нет, 1 - Да].
+	"continue"						"0"															//	Выполнять ли последовательно достижения с одинаковыми "event" [0 - Параллельно, 1 - По "event"(Последовательно), 2 - "condition"(Последовательно)].
+																								//	То есть, у нас "count" "10" в достижении "Killer I" и "count" "50" в достижении "Killer II",
+																								//	Если-бы стояло "continue" "1", то когда игрок выполнит "Killer I", то "Killer II" начнеться с 0 а не с 10.
+																								//	А если-бы стояло "continue" "0", то когда игрок выполнит "Killer I", то "Killer II" продолжиться с 10 а не с 0,
+																								//	Так как у нас "count" "10" в достижении "Killer I", то есть для "Killer II" останется выполнить 40 раз а не 50 как задано.
+																								//	Проще говоря, достижение будет продолжиться или начнется с нуля
 
-	"notification"					"3"															//Тип уведомления игроку о выполненном достижении: [0 - Выключено, 1 - Сообщение в чат, 2 - Alert, 3 - Center].
-	"server_id"						"1"															//Номер сервера(ов)
+	"notification"					"3"															//	Тип уведомления игроку о выполненном достижении: [0 - Выключено, 1 - Сообщение в чат, 2 - Alert, 3 - Center].
+	"server_id"						"1"															//	Номер сервера(ов)
+		
+
+
+
+
+
+
+
+	"Groups"																					// Группы
+	{
+		"Killer"																				// Идентификатор группы
+		{
+			"event"				"player_death"	               									//	Событие, при котором можно получить это достижение
+			"executor"			"attacker"		               									//	Кто должен выполнить это событие (userid или attacker)
+			
+			"condition"			"none"															//	Условие получения этого достижения
+																								//	Примеры:
+																								//	none (Обязательно! Если ничего не хотите ставить здесь)
+																								//	weapon = knife (к примеру, это убийство с ножа)
+																								//	weapon = awp|scout (убийство должно произойти либо с авп либо ссг)
+			
+			"notification_all"	"1"																//	Уведомлять всех игроков о выполнении достижения?(0 - Нет, 1 - Да)
+			"sound_done"		"achievements/xbox.mp3"											//	Звук при выполнении достижения(без sound). (Оставьте пустым чтобы отключить)
+			"sound_done_volume"	"1.0"															//	Громкость звука выполнения достижения: [0.0 - 1.0].
+		}
+	}
+
+
+
+
+
+
 
 	"Achievement"
 	{
-		}
-		"Killer I"	                                    										//Название достижения (берется из файла перевода в трех видах: название, описание, награда)
+		"Killer I"
 		{
-			"event"				"player_death"	               									//Событие, при котором можно получить это достижение
-			"executor"			"attacker"		               									//Кто должен выполнить это событие (userid или attacker)
+			"count"				"10"				            								//	Сколько раз необходимо сделать
 			
-			"condition"			"none"															//условие получения этого достижения
-																								//Примеры:
-																								//none (Обязательно! Если ничего не хотите ставить здесь)
-																								//weapon = knife (к примеру, это убийство с ножа)
-																								//weapon = awp|scout (убийство должно произойти либо с авп либо ссг)
-			"count"				"10"				            								//сколько раз необходимо сделать
+			"trigger"			"shop;lvl"														//	Триггер модуля
+			"outcome"			"5;5"															//	Параметры триггера
 
-			"trigger"			"shop;lvl"														//Триггер модуля
-			"outcome"			"5;5"															//Параметры триггера
-			
-			"hide"				"0"																//Скрывать ли достижение в меню (Проще говоря, оно скрыто в меню, но так же доступно для выполнения)
-			"map"				"de_dust2"														//На какой карте будет выполняться достижение
-
-			"notification_all"	"1"																//Уведомлять всех игроков о выполнении достижения?(0 - Нет, 1 - Да)
-			"sound_done"		"achievements/xbox.mp3"											//Звук при выполнении достижения(без sound). (Оставьте пустым чтобы отключить)
-			"sound_done_volume"	"1.0"															//Громкость звука выполнения достижения: [0.0 - 1.0].
+			"map"				"de_dust2"														//	На какой карте будет выполняться достижение
+			"hide"				"0"																//	Скрывать ли достижение в меню (Проще говоря, оно скрыто в меню, но так же доступно для выполнения)
+			"group"				"Killer"														//	Сюда вписывать Идентификатор группы 
 		}
 		
 		"Killer II"
 		{
-			"event"				"player_death"	             
-			"executor"			"attacker"		             
-			
-			"condition"			"none"
 			"count"				"50"				         
 			
 			"trigger"			"shop;lvl"					
-			"outcome"			"30;30"				
+			"outcome"			"30;30"
 			
-			"notification_all"	"1"					
-			"sound_done"		"achievements/xbox.mp3"
-			"sound_done_volume"	"1.0"				
+			"group"				"Killer"		
 		}
 		
 		"Killer III"
 		{
-			"event"				"player_death"	             
-			"executor"			"attacker"		             
-			
-			"condition"			"none"
 			"count"				"100"				         
 			
 			"trigger"			"shop;lvl"			
-			"outcome"			"50;50"				
+			"outcome"			"50;50"
 			
-			"notification_all"	"1"					
-			"sound_done"		"achievements/xbox.mp3"
-			"sound_done_volume"	"1.0"				
+			"group"				"Killer"			
 		}
 		
 		"Killer IV"
 		{
-			"event"				"player_death"	             
-			"executor"			"attacker"		             
-			
-			"condition"			"none"
 			"count"				"200"				         
 			
 			"trigger"			"shop;lvl"				
-			"outcome"			"150;100"				
+			"outcome"			"150;100"
 			
-			"notification_all"	"1"					
-			"sound_done"		"achievements/xbox.mp3"
-			"sound_done_volume"	"1.0"				
+			"group"				"Killer"			
 		}
 		
 		"Killer V"
 		{
-			"event"				"player_death"
-			"executor"			"attacker"
-			
-			"condition"			"none"
 			"count"				"450"
 
 			"trigger"			"shop;lvl"				
-			"outcome"			"450;200"				
-
-			"notification_all"	"1"					
-			"sound_done"		"achievements/xbox.mp3"
-			"sound_done_volume"	"1.0"				
+			"outcome"			"450;200"
+			
+			"group"				"Killer"			
 		}
 		
 		"Killer VI"
 		{
-			"event"				"player_death"
-			"executor"			"attacker"
-			
-			"condition"			"none"
 			"count"				"700"
 
 			"trigger"			"shop;lvl"				
-			"outcome"			"950;300"				
-											
-			"notification_all"	"1"					
-			"sound_done"		"achievements/xbox.mp3"
-			"sound_done_volume"	"1.0"				
+			"outcome"			"950;300"
+			
+			"group"				"Killer"		
 		}
 		
 		"Killer VII"
 		{
-			"event"				"player_death"
-			"executor"			"attacker"
-			
-			"condition"			"none"
 			"count"				"1000"
 
 			"trigger"			"shop;lvl"				
-			"outcome"			"1450;499"				
-
-			"notification_all"	"1"					
-			"sound_done"		"achievements/xbox.mp3"
-			"sound_done_volume"	"1.0"				
+			"outcome"			"1450;499"
+			
+			"group"				"Killer"		
 		}
 		
 		"Killer VIII"
 		{
-			"event"				"player_death"
-			"executor"			"attacker"
-			
-			"condition"			"none"
 			"count"				"1500"
 
 			"trigger"			"shop;lvl"				
-			"outcome"			"2000;666"			
-
-			"notification_all"	"1"					
-			"sound_done"		"achievements/xbox.mp3"
-			"sound_done_volume"	"1.0"				
+			"outcome"			"2000;666"
+			
+			"group"				"Killer"			
 		}
 		
 		"Killer IX"
 		{
-			"event"				"player_death"
-			"executor"			"attacker"
-			
-			"condition"			"none"
 			"count"				"2000"
 
 			"trigger"			"shop;lvl"				
-			"outcome"			"2750;800"				
-
-			"notification_all"	"1"					
-			"sound_done"		"achievements/xbox.mp3"
-			"sound_done_volume"	"1.0"				
+			"outcome"			"2750;800"
+			
+			"group"				"Killer"		
 		}
 		
 		"Killer X"
 		{
-			"event"				"player_death"
-			"executor"			"attacker"
-
-			"condition"			"none"
 			"count"				"4000"
 
 			"trigger"			"shop;lvl"	
 			"outcome"			"5000;1000"
-
-			"notification_all"	"1"
-			"sound_done"		"achievements/xbox.mp3"
-			"sound_done_volume"	"1.0"
+			
+			"group"				"Killer"
 		}
 	}
 }
