--- a/addons/sourcemod/configs/achievements.ini
+++ b/addons/sourcemod/configs/achievements.ini
@@ -19,6 +19,11 @@
 
 	"notification"					"3"															//	Тип уведомления игроку о выполненном достижении: [0 - Выключено, 1 - Сообщение в чат, 2 - Alert, 3 - Center].
 	"server_id"						"1"															//	Номер сервера(ов)
+	
+	"hud_xy" 						"0.93 0.0"													// 	Расположение HUD - Горизонталь Вертикаль
+	"hud_time"  					"5.0"														// 	Время через сколько исчезнит HUD
+	"hud_color" 					"255 0 0 0"													//	Цвет HUD - RGBA
+
 		
 
 
